--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "watch": [
       "src"
     ],
-    "ext": "ts, html",
+    "ext": "html",
     "ignore": [
       "src/public"
     ],
-    "exec": "./node_modules/.bin/ts-node -r tsconfig-paths/register ./src"
+    "exec": "node --inspect=0.0.0.0:7100 ./node_modules/.bin/ts-node -r tsconfig-paths/register ./src"
   },
   "_moduleAliases": {
     "@services": "dist/services",
