--- a/package.json
+++ b/package.json
@@ -93,6 +93,10 @@
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.0",
+    "prettier": "^2.3.2",
     "find": "^0.3.0",
     "fs-extra": "^10.1.0",
     "jasmine": "^4.2.0",
